Fix margins and  spacing for paragraphs and headers

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,8 +21,14 @@
   section {
     @apply py-14;
   }
-  section h1, h2, h3 {
+  section h1 {
     @apply mb-6
+  }
+  section h2 {
+    @apply mb-3
+  }
+  section h3 {
+    @apply mb-1
   }
   input[type="number"] {
     -moz-appearance: textfield;
@@ -41,5 +47,12 @@
   .full-bleed-section-yellow {
     background-color: #eeaf3a;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%23e0960b' fill-opacity='0.71'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+  }
+  .text-content p {
+    @apply mb-6;
+  }
+  .section-divider {
+    @apply border-b;
+    @apply border-base-200;
   }
 }
